--- a/package.json
+++ b/package.json
@@ -21,17 +21,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-<<<<<<< HEAD
-<<<<<<< HEAD
+
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "deploy": "npm run build&&gh-pages -d build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-=======
-    "deploy": "npm run build&&gh-pages -d build"
->>>>>>> ca36f28d461414d77917fca7df335c5adb34f08f
-=======
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
->>>>>>> main
   },
   "eslintConfig": {
     "extends": [
